--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,22 @@
 [package]
 name = "micro-claw"
 version = "0.1.0"
-edition = "2021"
+edition = "2026"
 
 [dependencies]
-# Embedded core
-riscv-rt = "0.12"           # Replace with cortex-m-rt if using ARM
-panic-halt = "0.2"          # Minimal panic handler (saves ~20KB)
-embedded-hal = "1.0"        # Hardware abstraction
+# Architecture support
+riscv-rt = "0.12"
+cortex-m-rt = "0.7"
+panic-halt = "0.2"
 
-# Zero-Heap Data Structures
-heapless = "0.8"            # Fixed-capacity Vec and String
+# Efficient Data Handling
+heapless = "0.8"
 serde = { version = "1.0", default-features = false, features = ["derive"] }
-serde-json-core = "0.5"     # JSON parsing without memory allocation
+serde-json-core = "0.5"
 
 [profile.release]
-opt-level = "z"             # Optimize specifically for binary size
-lto = true                  # Link Time Optimization (huge size reduction)
-codegen-units = 1           # Allow maximum optimization passes
-panic = "abort"             # Remove stack unwinding
-strip = true                # Automatically strip symbols from binary
+opt-level = "z"      # Size optimization
+lto = true           # Link-time optimization
+codegen-units = 1
+panic = "abort"
+strip = true
